--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue May 12 16:04:37 EDT 2015
-sdk.dir=/Users/Chao/Library/Android/sdk
+#Wed May 13 16:21:13 EDT 2015
+sdk.dir=C\:\\Program Files (x86)\\Android\\android-sdk
